# pokemonshowdown-random-battle-ai-agent

./: .gitignore  AGENTS.md  README-spanish.md  README.md  pyproject.toml
artifacts/: feature_manifest.json  knowledge_feedback.jsonl
artifacts/processed/: feedback_20251219_120728.jsonl  feedback_20251219_160213.jsonl  feedback_20251219_162034.jsonl  feedback_20251219_195247.jsonl
data/knowledge_cache/: llm_ability_adaptability.json  llm_ability_aerilate.json  llm_ability_aftermath.json  llm_ability_air-lock.json  llm_ability_analytic.json  llm_ability_anger-point.json  llm_ability_anger-shell.json  llm_ability_anticipation.json  llm_ability_arena-trap.json  llm_ability_armor-tail.json  llm_ability_aroma-veil.json  llm_ability_as-one-glastrier.json  llm_ability_as-one-spectrier.json  llm_ability_aura-break.json  llm_ability_bad-dreams.json  llm_ability_ball-fetch.json  llm_ability_battery.json  llm_ability_battle-armor.json  llm_ability_battle-bond.json  llm_ability_beads-of-ruin.json  llm_ability_beast-boost.json  llm_ability_berserk.json  llm_ability_big-pecks.json  llm_ability_blaze.json  llm_ability_bulletproof.json  llm_ability_cheek-pouch.json  llm_ability_chilling-neigh.json  llm_ability_chlorophyll.json  (+2084 more)
tests/: test_battle_state.py  test_deepseek_agent.py  test_deepseek_cache_agent.py  test_evaluator_matchup.py  test_feature_extractor.py  test_inference_updates.py  test_knowledge_loaders.py  test_legal_actions.py  test_live_match_helpers.py  test_llm_policy.py  test_online_agent.py  test_policy_valid_actions.py  test_protocol_parser.py
(+52 files in other folders)
